--- a/src/JavaScript测试/测试JS的代码.html
+++ b/src/JavaScript测试/测试JS的代码.html
@@ -4,13 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content"=width=device-width, initial-scale=1.0">
     <title>测试JS的代码</title>
     <script>
+
+        alert("陈纯华，你准备好了吗？");
+        alert("准备要输入你的年龄了咯");
+        alert("确定你准备好了吗？");
+        var age = prompt(" 请输入你的年龄");
+        alert("你的年龄是18岁，哈哈哈哈");
+        alert("你输入的是" + age + "岁");
+        console.log("测试JS的代码~~~~~~");
+
         // 1问  
         console.log(num);
 
-
+       
 
         // 2问
         console.log(num); // undefined  坑 1
