--- a/src/html5测试/html5基本语法.html
+++ b/src/html5测试/html5基本语法.html
@@ -30,9 +30,9 @@
       <!--设置编码-->
       <meta charset="UTF-8">
   </head>
-  <!--身体(主要内容)-->
   <!--
-    基本上html的内容和结构都是放在<body>元素里面实现的了。
+    身体(主要内容)
+    1、基本上html的内容和结构都是放在<body>元素里面实现的了。
   -->
   <body>
       <p>hello World!</p>
