--- a/src/WebAPI测试/37B测试DOM事件.html
+++ b/src/WebAPI测试/37B测试DOM事件.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- 
-    1、通过DOM获取元素对象，并给元素对象注册事件。
-    2、
 
+    事件步骤：
+    1、通过DOM获取元素对象，并给元素对象注册事件。
+
+    DOM 事件流：
+    1、事件发生时会在元素节点之间按照特定的顺序传播，这个传播过程即 DOM 事件流。事件流描述的是从页面中接收事件的顺序。
+    2、DOM 事件流分为3个阶段：
+        1. 捕获阶段
+          事件捕获： 网景最早提出，由 DOM 最顶层节点开始，然后逐级向下传播到到最具体的元素接收的过程。
+        2. 当前目标阶段
+        3. 冒泡阶段
+          事件冒泡： IE 最早提出，事件开始时由最具体的元素接收，然后逐级向上传播到到 DOM 最顶层节点的过程。
+
+    3、注意：
+        1. JS 代码中只能执行捕获或者冒泡其中的一个阶段。
+        2. onclick 和 attachEvent 只能得到冒泡阶段。
+        3. addEventListener(type, listener[, useCapture])第三个参数如果是 true，表示在事件捕获阶段调用事件处理程序；
+            如果是 false（不写默认就是false），表示在事件冒泡阶段调用事件处理程序。
+        4. 实际开发中我们很少使用事件捕获，我们更关注事件冒泡。
+        5. 有些事件是没有冒泡的，比如 onblur、onfocus、onmouseenter、onmouseleave
+        6. 事件冒泡有时候会带来麻烦，有时候又会帮助很巧妙的做某些事件，我们后面讲解。
+
+    4、事件对象：
+        官方解释：event 对象代表事件的状态，比如键盘按键的状态、鼠标的位置、鼠标按钮的状态。
+        简单理解：事件发生后，跟事件相关的一系列信息数据的集合都放到这个对象里面，这个对象就是事件对象event，它有很多属性和方法。
+                 比如： 
+                    1. 谁绑定了这个事件。
+                    2. 鼠标触发事件的话，会得到鼠标的相关信息，如鼠标位置。
+                    3. 键盘触发事件的话，会得到键盘的相关信息，如按了哪个键。
  -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,32 +47,50 @@
         <input type="password" class="ipt">
         <p class="message">请输入6~16位密码</p>
     </div>
+    <div id="onmouseEvent"> 鼠标经过事件 </div>
 
     <!-- 
+        
+
+        注册事件的两种方式：
         1、直接通过 元素对象的 onclick 属性注册 block 事件。
+        2、addEventListener 事件监听方式。（官方建议）
+            (1) 里面的事件类型是字符串 必定加引号 而且不带on
+            (2) 同一个元素 同一个事件可以添加多个侦听器（事件处理程序）
+        3、 attachEvent ie9以前的版本支持。相当于带on的addEventListener方式。
+
+        删除事件：
+            1. divs[0].onclick = null;
+            2. divs[1].removeEventListener('click', fn); 删除事件
+            3. divs[2].detachEvent('onclick', fn1);
     -->
     <script>
         /*
-            1、点击事件
+            1、点击事件。
         */
         var btn = document.getElementById('btn');
-        btn.onclick = function() {
+        btn.onclick = function () {
             alert('点秋香');
         }
 
-
+        /* 事件侦听注册事件 addEventListener 
+        该方法接收三个参数：
+             type：事件类型字符串，比如 click 、mouseover ，注意这里不要带 on
+             listener：事件处理函数，事件发生时，会调用该监听函数
+             useCapture：可选参数，是一个布尔值，默认是 false。学完 DOM 事件流后，我们再进一步学习。
+        */
         var div = document.querySelector("div")
-        div.onclick = function(){
+        div.addEventListener('click', function () {
             console.log('div被选中了')
-        }
+        })
 
         /*
-            2、获取焦点事件
+            2、焦点事件
         */
 
         var ipt = document.querySelector('.ipt');
         var message = document.querySelector('.message');
-        ipt.onblur = function() {   // 失去焦点
+        ipt.onblur = function () {   // 失去焦点
             // 根据表单里面值的长度 ipt.value.length
             if (this.value.length < 6 || this.value.length > 16) {
                 message.className = 'message wrong';
@@ -56,7 +101,35 @@
             }
         }
 
+        /*
+           3、鼠标经过事件，鼠标离开事件
+       */
+        var div = document.getElementById('onmouseEvent')
+        div.onmouseover = function () {   //鼠标经过
+            this.style.background = 'yellow'
+        }
+        div.onmouseout = function () {    //鼠标离开
+            this.style.background = 'pink'
+        }
 
+        /*
+            4、删除事件
+        */
+
+        div.addEventListener('click', fn) // 里面的fn 不需要调用加小括号
+        function fn() {
+            alert(22);
+            divs[1].removeEventListener('click', fn);
+        }
+
+        /*
+            5、事件对象
+                1.这个 event 是个形参，系统帮我们设定为事件对象，不需要传递实参过去。
+                  当我们注册事件时， event 对象就会被系统自动创建，并依次传递给事件监听器（事件处理函数）。
+        */
+        div.onclick = function(event) {
+            console.log("系统自动传递的事件对象:" + event)
+        }
 
     </script>
 
