ajax服务器,ajax请求，响应，错误处理，封装成函数

--- a/src/css测试/css的盒子模型.html
+++ b/src/css测试/css的盒子模型.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--
 //MARK: - 笔记
     1、测试CSS的布局：
@@ -12,12 +13,12 @@
                 inherit : 规定应该从父元素继承 position 属性的值。
     2、
 -->
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <title>HTML的盒子模型</title>
     <style>
+        
         *{
             margin: 0;
         }
@@ -86,7 +87,7 @@
        <div id = "subTestLayout"> 测试CSS的布局的子元素div标签</div>
    </div>
    <div id = "testCenter">测试CSS的内容居中布局
-       <span id = "subTestCenter"> span行内标签</div>
+       <span id = "subTestCenter"> span行内标签</span>
    </div>
 </body>
 </html>
