--- a/src/html5测试/_html5基本语法.html
+++ b/src/html5测试/_html5基本语法.html
@@ -81,7 +81,7 @@
       <!--
          相对路径: 资源在当前的项目中  (./ ../ ././lao.png)
 
-         绝对路径: 资源不再当前项目中 (http:// https:// ftp://  file:///)
+         绝对路径: 资源不在当前项目中 (http:// https:// ftp://  file:///)
          https://www.baidu.com/img/bd_logo1.png
       -->
       <!--图像标签-->
