vue剩下的知识点，好像也没啥

--- a/src/JavaScript测试/38F测试JS_Promise对象.html
+++ b/src/JavaScript测试/38F测试JS_Promise对象.html
@@ -4,6 +4,7 @@
         1、Promise是JS的原生api提供的对象，用于异步执行任务、前后端交互。
             Promise就是一个函数对象，在js中，函数也是一个对象，万物皆对象。
             Promise是基于ajax的进一步升级封装。ajax更加原始。
+        2、Promise的then方法可以解决异步函数深沉嵌套的问题，也就相当于加了同步锁。
      -->
 <head>
     <meta charset="UTF-8">
