--- a/src/JavaScript测试/38G测试Promise对象的方法.html
+++ b/src/JavaScript测试/38G测试Promise对象的方法.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <!-- 
-        1、p.then()得到异步任务的正确结果。
+        1、p.then()得到异步任务的正确结果。默认返回Promise对象，如果你返回普通值，则传递给下一个then方法的参数中(链式调用)。
         2、p.catch()获取异常信息。
         3、p.finally()成功与否都会执行（还不是正式标准）
         4、Promise.all()并发处理多个异步任务，所有任务都执行完成才能得到结果。
