--- a/src/Vue框架测试/38H测试模拟的路由.html
+++ b/src/Vue框架测试/38H测试模拟的路由.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <!-- 
+        所谓路由，就是寻找资源的位置，根据路径去找，所以就叫路由。
         1、后端路由：
             概念：根据不同的用户 URL 请求，返回不同的内容。
             本质：URL 请求地址与服务器资源之间的对应关系。也就是服务器有一个路由器，所有的前端请求都会经过路由器的筛选再去到服务器内部寻找内容或者运算。
