Vuex还没看完，然后vue基本上还不熟

--- a/src/Vue框架测试/38F测试Vue组件开发.html
+++ b/src/Vue框架测试/38F测试Vue组件开发.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <!-- 
+      一、传统组件的问题：
+        1. 全局定义的组件必须保证组件的名称不重复
+        2. 字符串模板缺乏语法高亮，在 HTML 有多行的时候，需要用到丑陋的 \
+        3. 不支持 CSS 意味着当 HTML 和 JavaScript 组件化时，CSS 明显被遗漏
+        4. 没有构建步骤限制，只能使用 HTML 和 ES5 JavaScript, 而不能使用预处理器（如：Babel）
+
+      二、Vue提供的组件：
+        针对传统组件的问题，Vue 提供了一个解决方案 —— 使用 Vue 单文件组件。
         1、组件化规范: Web Components 要解决的问题：
             1.我们希望尽可能多的重用代码。
             2.自定义组件的方式不太容易（html、css和js） 。
             3.多次使用组件可能导致冲突。
             Web Components 规范想通过创建封装好功能的定制元素解决上述问题。Vue框架部分实现了这个规范。
-
+            
         2、所以，组件化开发就是封装好功能的定制元素。就是自定义标签。
         3、局部组件只能在注册他的父组件中使用
      -->
