配置webpack浏览页

--- a/src/webpack测试/webpackCase/src/index.html
+++ b/src/webpack测试/webpackCase/src/index.html
@@ -7,6 +7,7 @@
      <!-- <script src="./index.js"></script> -->
       <!-- <script src="../dist/main.js"></script> -->
       <!-- <script src="../dist/bundle.js"></script> -->
+      <!-- 当在浏览器访问的时候，这个地址就是对应服务器的工程项目地址 -->
       <script src="/bundle.js"></script>
 </head>
 <body>
