创建vue项目，插件什么的，好多问题，现在主要是eslint的代码检验问题

--- a/src/Vue框架测试/38A测试Vue的基本使用.html
+++ b/src/Vue框架测试/38A测试Vue的基本使用.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <!-- 
         1、Vue的基本使用步骤：
-            1、需要提供标签用于填充数据。
-            2、引入vue.js库文件，在script代码区域配置vue对象，写js代码，配置vue数据。
-            3、使用vue的语法做功能了，在html标签内使用vue的语法，vue就会实现相应的功能。
-            4、把vue提供的数据填充到标签里面。
+            1.写一个html文件，需要提供标签用于填充数据
+            2.引入vue.js库文件，在script代码区域配置vue对象，写js代码，配置vue数据。
+            3.在<script>里面写vue的语法代码，做功能，在html标签内使用vue的语法，vue就会实现相应的功能。
+            4.把vue提供的数据填充到标签里面。
 
         2、Vue代码运行原理：
             因为引入了vue.js文件，这个文件会对当前文件的代码进行编译解释。把 Vue语法→原生语法
